feat: IDbDeleteRole and remove JEST and update ENV variables

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build -p ts-config-build.json",    
+    "build": "nest build -p ts-config-build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-staged-custom": "git diff --name-only HEAD^ HEAD | grep 'commit add' | xargs npx lint-staged",
     "start": "nest start",
@@ -18,15 +18,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d src/infra/db/database.provider.ts",
     "migration:create": "npx typeorm migration:create",
     "migration:generate": "npx typeorm migration:generate -d src/infra/db/database.provider.ts",
-    "migration:latest": "npx typeorm migration:run -d dist/infra/db/database.provider.js",
+    "migration:latest": "npm run build npx typeorm migration:run -d dist/infra/db/database.provider.js",
     "migration:revert": "npx typeorm migration:revert",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
-    "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "npm test -- --watch -c jest-unit-config.js",
-    "test:integration": "npm test -- --watch -c jest-integration-config.js",
-    "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage",
-    "test:coveralls": "npm test:ci",
     "prepare": "husky install"
   },
   "postinstall": "husky install",
@@ -38,7 +31,6 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.2",
-    "@shelf/jest-mongodb": "^4.2.0",
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1548.0",
     "aws-sdk-mock": "^5.9.0",
@@ -74,12 +66,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^9.0.6",
-    "jest": "28.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
