--- a/utils/.env.example
+++ b/utils/.env.example
@@ -1,10 +1,26 @@
-MONGO_URL=mongodb://localhost:27017
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_KEY=
 AWS_REGION=
+
+AWS_CATALOG_BUCKET=
+AWS_PROFILE_BUCKET=
+
 AWS_SNS_TOPIC_CATALOG_ARN=
 AWS_SNS_API_VERSION=
-AWS_BUCKET=
+
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
+DB_PORT=
+
 SWAGGER_USERNAME=
 SWAGGER_PASSWORD=
+SWAGGER_TITLE=
+SWAGGER_DESCRIPTION=
+SWAGGER_VERSION=
+
+SALT=12
+SECRET_KEY=
+
+PORT=
