--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d src/infra/db/database.provider.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
     "migration:create": "npx typeorm migration:create",
     "migration:generate": "npx typeorm migration:generate -d src/infra/db/database.provider.ts",
     "migration:latest": "nest build && npx typeorm migration:run -d dist/infra/db/database.provider.js",
-    "migration:revert": "npx typeorm migration:revert",
     "prepare": "husky install"
   },
   "postinstall": "husky install",
