--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1548.0",
     "aws-sdk-mock": "^5.9.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
