--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.1",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.9",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
