--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "seed": "nest build && ts-node dist/infra/db/typeorm/seeds/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
     "migration:create": "npx typeorm migration:create",
