--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "colorette": "^2.0.20",
     "dotenv": "^16.4.1",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
