feat: add SHIPPING calculate endpoint and service

--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/aws-sdk": "^2.7.0",
+    "@types/cheerio": "^0.22.35",
     "aws-sdk": "^2.1548.0",
     "aws-sdk-mock": "^5.9.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "colorette": "^2.0.20",
+    "correios-brasil": "^3.0.6",
     "dotenv": "^16.4.1",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
