--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "migration:create": "npx typeorm migration:create",
     "migration:generate": "npx typeorm migration:generate -d src/infra/db/database.provider.ts",
     "migration:latest": "nest build && npx typeorm migration:run -d dist/infra/db/database.provider.js",
+    "migration:revert": "nest build && npx typeorm migration:revert -d dist/infra/db/database.provider.js",
     "prepare": "husky install"
   },
   "postinstall": "husky install",
