--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build -p ts-config-build.json",
+    "build": "nest build -p tsconfig-build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-staged-custom": "git diff --name-only HEAD^ HEAD | grep 'commit add' | xargs npx lint-staged",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "seed": "nest build && ts-node dist/infra/db/typeorm/seeds/seed.js",
+    "start:prod": "node -r module-alias/register dist/main.js",
+    "seed": "nest build && ts-node -r module-alias/register dist/infra/db/typeorm/seeds/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
+    "typeorm": "ts-node -r tsconfig-paths/register -r module-alias/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
     "migration:create": "npx typeorm migration:create",
     "migration:generate": "npx typeorm migration:generate -d src/infra/db/database.provider.ts",
     "migration:latest": "nest build && npx typeorm migration:run -d dist/infra/db/database.provider.js",
@@ -33,12 +33,10 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/aws-sdk": "^2.7.0",
-    "@types/cheerio": "^0.22.35",
     "aws-sdk": "^2.1548.0",
     "aws-sdk-mock": "^5.9.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "colorette": "^2.0.20",
@@ -47,6 +45,7 @@
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.0.9",
+    "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -81,6 +80,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   },
   "engines": {
     "node": "18.x"
