--- a/ts-config-build.json
+++ b/ts-config-build.json
@@ -1,7 +1,17 @@
 {
     "extends": "./tsconfig.json",
-    "exclude": [
-        "**/*spec.ts",
-        "**/*.test.ts"
-    ]
-}
+    "compilerOptions": {
+      "outDir": "./dist",
+      "rootDir": "./src",
+      "baseUrl": "./src",
+      "paths": {
+        "@/*": ["*"]
+      },
+      "module": "commonjs",
+      "target": "es6",
+      "sourceMap": true,
+      "declaration": true
+    },
+    "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  }
+  
