--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,20 @@
 {
     "version": 2,
+    "buildCommand": "sh vercel.sh",
     "builds": [
       {
-        "src": "dist/main.js",
-        "use": "@vercel/node"
+        "src": "src/main.ts",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["dist/**/*"]
+        }
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/dist/main.js"
+        "dest": "dist/main.js"
       }
-    ],
-    "buildCommand": "npm run build"
+    ]
   }
   
