--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build -p tsconfig-build.json",
+    "lint-staged-custom": "git diff --name-only HEAD^ HEAD | grep 'commit add' | xargs npx lint-staged",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -31,12 +32,10 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/aws-sdk": "^2.7.0",
-    "@types/cheerio": "^0.22.35",
     "aws-sdk": "^2.1548.0",
     "aws-sdk-mock": "^5.9.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "colorette": "^2.0.20",
