--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,13 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "dist/main.js"
+        "dest": "dist/main.js",
+        "methods": [
+          "GET",
+          "POST",
+          "PUT",
+          "DELETE"
+        ]
       }
     ]
   }
