chore: deploy options VERCEL files

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 {
     "version": 2,
-    "buildCommand": "sh vercel.sh",
     "builds": [
       {
         "src": "src/main.ts",
-        "use": "@vercel/node",
-        "config": {
-          "includeFiles": ["dist/**/*"]
-        }
+        "use": "@vercel/node"
       }
     ],
     "routes": [
