--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,9 @@
           "DELETE"
         ]
       }
+    ],
+    "rewriters": [
+      { "source": "(/(.*)", "destination": "/" }
     ]
   }
   
