--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npm run build && node -r module-alias/register dist/main.js",
+    "start:prod": "node -r module-alias/register dist/main.js",
     "seed": "nest build && ts-node -r module-alias/register dist/infra/db/typeorm/seeds/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r tsconfig-paths/register -r module-alias/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
