--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,16 +1,19 @@
-FROM node:18
+# Use uma imagem base menor e otimizada
+FROM node:18-alpine
 
 WORKDIR /usr/app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install --only=production
 
 COPY . .
 
 COPY .env .env
 
 RUN npm run build
+
+RUN npm prune --production
 
 EXPOSE 3000
 
