--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.14.1",
     "colorette": "^2.0.20",
     "correios-brasil": "^3.0.6",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.1",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
