--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main",
     "seed": "nest build && ts-node dist/infra/db/typeorm/seeds/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
@@ -30,6 +30,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/aws-sdk": "^2.7.0",
@@ -43,6 +44,7 @@
     "class-validator": "^0.14.1",
     "colorette": "^2.0.20",
     "correios-brasil": "^3.0.6",
+    "cron": "^3.1.7",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.1",
     "express-basic-auth": "^1.2.1",
