--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "aws-sdk": "^2.1548.0",
     "aws-sdk-mock": "^5.9.0",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
