refact: refact dockerfiles

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build -p ts-config-build.json",
+    "build": "npx nest build -p ts-config-build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-staged-custom": "git diff --name-only HEAD^ HEAD | grep 'commit add' | xargs npx lint-staged",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
+    "start:prod": "node dist/main",
     "seed": "nest build && ts-node dist/infra/db/typeorm/seeds/seed.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli -d dist/infra/db/database.provider.js",
